--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a></li>
             </ul>
         </section>
-        <script src="/script.js"></script>
+        <script src="script.js"></script>
     </main>
     <footer>
         <span>
