--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <footer>
         <span>
             Diseño inspirado en <a href="https://www.pinterest.com.mx/pin/834643743461941015/">Web de inspiración</a> | 
-            Pagina web hecha por David Hernández para fines de practicar.
+            Pagina web hecha por David Hernández.
         </span>
     </footer>
 </body>
